fix: make tag priority list Java 8 compatible